tests/baselines/local-_cax-ez3.de.di1.txt/_cax-ez3.errors.txt
tests/cases/compiler/_cax-ez3.ts(15,13): error TS2532: Object is possibly 'undefined'.


==== tests/cases/compiler/_cax-ez3.ts (1 errors) ====
    declare type Foo = { 
        foo(x?:number):number[] 
        foo(x?:string,y?:string):string[] 
    };
    declare type Boo = { 
        foo(x?:bigint):bigint[]  
    };
    declare const obj: Readonly<Foo> | Readonly<Boo> | undefined;
    declare const okobj: Readonly<Foo> | Readonly<Boo>;
    const isFoo = obj?.foo();
    //let x: Readonly<Foo> | Readonly<Boo> | undefined;
    if (isFoo) {
        // @ special
        let x = obj;
        let y = x.foo;
                ~
!!! error TS2532: Object is possibly 'undefined'.
        let z = y();
        console.log(z);
    } 
    isFoo;
    
    
    
    // else {
    //     // @ special
    //     obj.foo;
    // }
    